--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,107 @@
-numpy==1.21.0
-pandas==1.4.2
-matplotlib==3.3.1
-seaborn==0.11.0
-pandas-profiling==3.1.0
-plotly==4.12.0
-ppscore==1.2.0
-
-streamlit==0.85.0
-
-feature-engine==1.0.2
-imbalanced-learn==0.8.0
-scikit-learn==0.24.2
-xgboost==1.2.1
-yellowbrick==1.3
-Jinja2==3.1.1
-MarkupSafe==2.0.1
-protobuf==3.20
-ipywidgets==8.0.2
+altair==5.0.1
+annotated-types==0.5.0
+asttokens==2.2.1
+attrs==23.1.0
+backcall==0.2.0
+blinker==1.6.2
+cachetools==5.3.1
+click==8.1.7
+comm==0.1.4
+contourpy==1.1.0
+cycler==0.11.0
+dacite==1.8.1
+debugpy==1.6.7.post1
+decorator==5.1.1
+executing==1.2.0
+feature-engine==1.6.1
+fonttools==4.42.0
+gitdb==4.0.10
+GitPython==3.1.32
+htmlmin==0.1.12
+ImageHash==4.3.1
+importlib-metadata==6.8.0
+ipykernel==6.25.1
+ipython==8.14.0
+ipywidgets==8.0.6
+jedi==0.19.0
+Jinja2==3.1.2
+joblib==1.1.1
+jsonschema==4.19.0
+jsonschema-specifications==2023.7.1
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter_client==8.3.0
+jupyter_core==5.3.1
+jupyterlab-widgets==3.0.7
+kiwisolver==1.4.4
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+matplotlib==3.7.2
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+missingno==0.5.2
+multimethod==1.9.1
+nest-asyncio==1.5.7
+networkx==3.1
+numpy==1.23.5
+packaging==23.1
+pandas==2.0.1
+parso==0.8.3
+patsy==0.5.3
+pexpect==4.8.0
+phik==0.12.3
+pickleshare==0.7.5
+Pillow==9.5.0
+platformdirs==3.10.0
+prompt-toolkit==3.0.39
+protobuf==4.24.1
+psutil==5.9.5
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyarrow==12.0.1
+pydantic==1.10.12
+pydantic_core==2.6.1
+pydeck==0.8.0
+Pygments==2.16.1
+Pympler==1.0.1
+pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2023.3
+pytz-deprecation-shim==0.1.0.post0
+PyWavelets==1.4.1
+PyYAML==6.0.1
+pyzmq==25.1.1
+qtconsole==5.4.3
+QtPy==2.3.1
+referencing==0.30.2
+rich==13.5.2
+rpds-py==0.9.2
+scikit-learn==1.3.0
+scipy==1.11.2
+seaborn==0.12.2
+six==1.16.0
+sklearn==0.0.post7
+smmap==5.0.0
+stack-data==0.6.2
+statsmodels==0.14.0
+streamlit==1.25.0
+tangled-up-in-unicode==0.2.0
+tenacity==8.2.3
+threadpoolctl==3.2.0
+toml==0.10.2
+toolz==0.12.0
+tornado==6.3.3
+traitlets==5.9.0
+typeguard==2.13.3
+typing_extensions==4.7.1
+tzdata==2023.3
+tzlocal==4.3.1
+validators==0.21.2
+visions==0.7.5
+watchdog==3.0.0
+wcwidth==0.2.6
+widgetsnbextension==4.0.7
+wordcloud==1.9.2
+xgboost==1.7.6
+ydata-profiling==4.5.1
+zipp==3.16.2
